# clue

./: .gitignore  README.md  pyproject.toml  test_backend.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Board.css  Board.jsx  GameControls.jsx  Hand.css  Hand.jsx  Notebook.jsx  PlayersList.css  PlayersList.jsx  RulesModal.css  RulesModal.jsx  VictoryModal.css  VictoryModal.jsx
src/clue/: agents.py  game_logic.py  models.py  server.py
